fix h4 spacing in widget - too general

--- a/style.css
+++ b/style.css
@@ -988,6 +988,7 @@ img.alignright,
 	font-weight: 700;
 	line-height: 1.25;
 	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .widget .entry-header .entry-title a {
